public interface Taxable {
    public void tax(Player player);
}
