public enum TransactionType {
    PAY,
    RECEIVE
}
