package com.monopoly.board;

import com.monopoly.Player;

public class BoxParking extends Box {

    public BoxParking() {
        super("PARCHEGGIO");
    }

    @Override
    public void applyEffect(Player player) {

    }

    @Override
    public String toString() {
        return super.toString();
    }
}
