@startuml

class Player {
  - name: String
  - sign: char
  - balance: int
  - position: int
  - START_POSITION: int
  + Player(name: String, sign: char): constructor
  + payMoney(amount: int): void
  + receiveMoney(amount: int): void
  + move(steps: int): void
  + toString(): String
  + getName(): String
  + getSymbol(): char
  + getBalance(): int
  + getPosition(): int
  + isBroke(): boolean
}

abstract class Dice {
  - MIN: int
  - MAX: int
  + {static} roll(): int
  + getFacesIcon(): int
}

abstract class Bank {
  - INITIAL_BALANCE: int
  - CONTRIBUTION: int
  - {static} balance: int
  + {static} payMoney(amount: int): void
  + {static} receiveMoney(amount: int): void
  + {static} reset(): void
  + {static} getBalance(): int
  + print(): void
}

class Game {
  - board: Board
  - players: Player[]
  - PLAYERS_NUMBER: int
  + Game(scanner: Scanner): constructor
  - play(scanner: Scanner): void
  - executeTurn(player: Player): void
  - showMenu(player: Player): void
}

package cli {
    enum TransactionType{
        PAY
        RECEIVE
    }

    enum Color {
        RESET
        BLACK
        RED
        GREEN
        YELLOW
        BLUE
        PURPLE
        CYAN
        WHITE
        + Color(code: String): constructor
        + getCode(): String
        + {static} random(): Color
    }

    abstract class TextColorizer {
        + {static} color(text: String, color: Color): String
        + {static} formatCurrency(amount: int): String
        + {static} padAnsi(text: String, width: int): String
    }
}

package board{
    package interfaces {
        interface Taxable {
          + tax(player: Player): void
        }

        interface Refundable {
          + refund(player: Player): void
        }
    }

    class Board {
      - boxes: Box[]
      - {static} STREET_NAME: String[]
      - {static} COLUMNS: int
      - {static} ROWS: int
      - {static} BOX_NUMBER: int
      - {static} INDEX_START: int
      - {static} INDEX_STATION_SUD: int
      - {static} INDEX_STATION_OVEST: int
      - {static} INDEX_STATION_NORD: int
      - {static} INDEX_STATION_EST: int
      - {static} INDEX_LUXURY: int
      - {static} INDEX_ASSETS:
      - players: Player[]
      + Board(players: Player[]): constructor
      + draw(): void
      - isBorder(row: int, col: int): boolean
      - getSignsAtIndex(index: int): char[]
      - getBoxIndex(row: int, col:int): int
      + getBox(value: int): Box
    }

    class Box {
      # {static} MIN_TOLL: int
      # {static} MAX_TOLL: int
      # value: int
      # name: String
      # description: String
      - representation: String[]
      + Box(value: int, name String): constructor
      + Box(name: String): constructor
      - {static} generateRandomNum(): int
      - updateRepresentation(): void
      + draw(index: int, players: char[]): String
      + {abstract} applyEffect(player: Player): void
      + toString(): String
      + setDescription(): void
      + getValue(): int
      + getName(): String
      + getDescription(): String
    }

    class BoxProperty {
      + BoxEstate(name: String): constructor
      + tax(player: Player): void
      + applyEffect(player: Player): void
      + toString(): String
    }

    class BoxAssets {
      + BoxHeritage(name: String): constructor
      + tax(player: Player): void
      + applyEffect(player: Player): void
      + toString(): String
    }

    class BoxLuxury {
      - LUXURY_TAX_AMOUNT: int
      + BoxLuxury(name: String): constructor
      + tax(player: Player): void
      + applyEffect(player: Player): void
      + toString(): String
    }

    class BoxParking {
      + BoxParking(name: String): constructor
      + applyEffect(player: Player): void
      + toString(): String
    }

    class BoxStart {
      + BoxStart(name: String): constructor
      + applyEffect(player: Player): void
      + {static} getBonus(): int
    }

    class BoxStation {
      + BoxStation(str: String): constructor
      + tax(player: Player): void
      + applyEffect(player: Player): void
      + toString(): String
    }
}

Box <|-- BoxProperty
Box <|-- BoxAssets
Box <|-- BoxLuxury
Box <|-- BoxParking
Box <|-- BoxStart
Box <|-- BoxStation

Taxable <|.. BoxLuxury
Taxable <|.. BoxAssets
Taxable <|.. BoxStation
Taxable <|.. BoxProperty

Refundable <|.. BoxStart

package utilities {
    abstract class ScannerUtilities {
      + {static} getInputString(scanner: Scanner, message: String): String
    }

    class FileUtilities {
       + leggiLineeFile(percorsoFile: String): String[]
    }

    class PlayerFactory {
       - players: Player[]
       - scanner: Scanner
       + PlayerFactory(scanner: Scanner, playersNumber: int): constructor
       + setup(): Player[]
       - getUniqueName(): String
       - getUniqueSign(): char
       - isNameAvailable(name: String): boolean
       - isSignAvailable(sign: char): boolean
    }

    enum MenuOption {
        VIEW_BALANCE
        ROLL_DICE
        UNKNOWN
        - ID: int
        - DESCRIPTION: String
        + MenuOption(id: int, description: String): constructor
        + toString(): String
    }
}

@enduml